# design_patterns

./: .gitignore  README.md  main
Adapter/: Adaptee.java  Adapter.java  runner.java
Bridge/: TVSet.java
Decorator/: Component.java  ConcreteComponent.java  ConcreteDecorator.java  Decorator.java
Factory/: FactoryA.java  FactoryB.java
Listener/: EventBroker.java  EventWatcher.java
Prototype/: ProtoType.java
Proxy/: RealSubject.java  Subject.java
SingleTon/: SingleTonDemo.java
builder/: Bottle.java  ChiBurger.java  Coke.java  Item.java
cxx_imp/: CMakeLists.txt
cxx_imp/Before/: CMakeLists.txt  CRTP.cpp  Mixin.cpp  SOLID.cpp  main.cpp
cxx_imp/Build_Patterns/: CMakeLists.txt  return.cxx
cxx_imp/Build_Patterns/Builder/: CMakeLists.txt  Pc.hpp  Person.hpp  main.cpp
cxx_imp/Build_Patterns/Factory/: CMakeLists.txt  Cafe.hpp  Wall.hpp  dumbs.hpp  main.cpp
cxx_imp/Build_Patterns/Prototype/: CMakeLists.txt  Cars.hpp  Contact.hpp  main.cpp
cxx_imp/Build_Patterns/Singleton/: CMakeLists.txt
cxx_imp/Build_Patterns/Singleton/Singleton/: CMakeLists.txt  Database.h
cxx_imp/Structrual_Patterns/Adapter/: CMakeLists.txt  Image.hpp  main.cpp
cxx_imp/Structrual_Patterns/Bridge/: CMakeLists.txt  Pimpl.cpp  Pimpl.hpp  Render.hpp  main.cpp
cxx_imp/Structrual_Patterns/Composite/: CMakeLists.txt  Creature.hpp  GraphicObj.hpp  main.cpp
cxx_imp/Structrual_Patterns/Decorator/: CMakeLists.txt  Dynamic_Decorator.h  Logger.hpp  Static_Decorator.h  main.cpp
java_imp/Adapter/: Target.java
java_imp/Bridge/: TCLController.java  controller.java  runner.java  sony.java
(+16 files in other folders)
