cmake_minimum_required(VERSION 3.14)
project(cxx_imp)

add_subdirectory(Before)

add_subdirectory(Build_Patterns/Builder)
add_subdirectory(Build_Patterns/Factory)
add_subdirectory(Build_Patterns/Prototype)
add_subdirectory(Build_Patterns/Singleton)

add_subdirectory(Structrual_Patterns/Adapter)
add_subdirectory(Structrual_Patterns/Bridge)
add_subdirectory(Structrual_Patterns/Composite)
add_subdirectory(Structrual_Patterns/Decorator)
